<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_orange_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/item_detail_photo"
                android:layout_width="120dp"
                android:layout_height="180dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                tools:src="@drawable/attack_on_titan"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_detail_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:textColor="@color/deep_orange"
                    tools:text="@string/series_name" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:id="@+id/item_detail_genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/deep_orange"
                        android:textSize="20sp"
                        android:text="@string/genre"/>

                    <TextView
                        android:id="@+id/item_detail_series_genre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:textSize="20sp"
                        android:textColor="@color/cream_dark"
                        tools:text="@string/series_genre"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:id="@+id/item_detail_release"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/release"
                        android:textColor="@color/deep_orange"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/item_detail_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:textColor="@color/cream_dark"
                        android:textSize="20sp"
                        tools:text="@string/series_year" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:id="@+id/item_detail_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating"
                        android:textColor="@color/deep_orange"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/item_detail_series_rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:textColor="@color/cream_dark"
                        android:textSize="20sp"
                        tools:text="@string/series_rating" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">
                    <Button
                        android:id="@+id/btn_like"
                        android:layout_width="110dp"
                        android:layout_height="match_parent"
                        android:drawableLeft="@drawable/ic_heart"
                        android:text="@string/like"
                        android:textSize="15sp"
                        android:paddingStart="6dp"
                        tools:ignore="RtlSymmetry" />

                    <!-- action_share here -->
                    <Button
                        android:id="@+id/btn_share"
                        android:layout_marginStart="10dp"
                        android:layout_width="110dp"
                        android:layout_height="match_parent"
                        android:drawableLeft="@drawable/ic_share"
                        android:text="@string/share"
                        android:textSize="15sp"
                        android:paddingStart="6dp"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/deep_orange_dark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/synopsis"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:textColor="@color/deep_orange"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/item_detail_synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:justificationMode="inter_word"
            android:textSize="17sp"
            android:textColor="@color/cream_dark"
            android:text="@string/detail"
            tools:targetApi="o"/>
    </LinearLayout>
</ScrollView>