<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_orange_light">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/deep_orange_light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/deep_orange">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                tools:src="@tools:sample/avatars"
                android:src="@drawable/warren" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:text="@string/dev_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"
                android:text="@string/dev_origin"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/birthdate"
                        android:textStyle="bold"
                        android:textColor="@color/deep_orange_dark"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="3dp"
                        android:layout_marginStart="10dp"
                        android:textSize="20sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/black"
                        android:text="@string/dev_birthdate"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/deep_orange_dark"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/institution"
                        android:textStyle="bold"
                        android:textColor="@color/deep_orange_dark"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:textSize="20sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/black"
                        android:text="@string/dev_institution"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/deep_orange_dark"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/major"
                        android:textStyle="bold"
                        android:textColor="@color/deep_orange_dark"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:textSize="20sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/black"
                        android:text="@string/dev_major"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/deep_orange_dark"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textStyle="bold"
                        android:textColor="@color/deep_orange_dark"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/tv_dev_email"
                        android:clickable="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/black"
                        android:text="@string/dev_email"
                        android:focusable="true" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/deep_orange_dark"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/linkedin"
                        android:textStyle="bold"
                        android:textColor="@color/deep_orange_dark"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/tv_dev_linkedin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/dev_linkedin"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/deep_orange_dark"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/github"
                        android:textStyle="bold"
                        android:textColor="@color/deep_orange_dark"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/tv_dev_github"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/dev_github"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/deep_orange_dark"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/instagram"
                        android:textStyle="bold"
                        android:textColor="@color/deep_orange_dark"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/tv_dev_instagram"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/dev_instagram"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/deep_orange_dark"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>